--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/styles.css" />
     <title>Sidekick Finder</title>
 </head>
 
@@ -31,23 +32,20 @@
               </div>
         </div>
 
-
         <section class="row my-4 border border-dark justify-content-around"> <!-- remove border -->
             <div class="col-12 col-md-9 text-center">
-                <h2>Start Quiz</h2>
+
+                <!-- Placeholder img for now until I can figure out to fecth img from api -->
+                <img src="/assets/Placeholder-Img.jpg" alt="Placeholder Image"> <br>
+
+                <button id="start">Start Quiz</button>
                 <!-- Start of card section -->
                 <!--Quiz-->
                 <section class="row my-4 boarder-dark justify-content-around">
-                <div> <!--enter class + col sizing -->
-                    <div class="card">
-                    <h3 class="card-header bg-warning">
-                        First question:
-                    </h3>
-                    <div class="card-body">
-                        <p class="card-text">
-                        Questions:
-                        </p>
-                    </div>
+                <!--enter class + col sizing -->
+                    <div id="questions" class="hide"> 
+                    <h3 id="question-title" class="card-header bg-warning"></h3>
+                    <div id="choices" class="choices"></div>
                     </div>
                 </div>
                 <!--User Input Section-->
@@ -102,6 +100,7 @@
             <div class = "row">
                 <div class = "col-12 col-md-6 text-left">
                     <h1>Footer Links</h1>
+                    <h6 class="credits">Data provided by Marvel. © 2014 Marvel</h6>
                 </div>
             </div>
         </div>
