--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!--Nav bar-->   
         <div class = "row my-4 border border-dark"> <!-- add ID and nav fx -->
-            <div class="topnav">
+            <div class="topnav" id = "home">
                 <a class="active" href="#home">Home</a>
                 <a href="#quiz">Quiz</a>
                 <a href="#popular">Popular</a>
@@ -33,7 +33,7 @@
         </div>
 
         <section class="row my-4 border border-dark justify-content-around"> <!-- remove border -->
-            <div class="col-12 col-md-9 text-center">
+            <div id ="quiz"class="col-12 col-md-9 text-center">
 
                 <!-- Placeholder img for now until I can figure out to fecth img from api -->
                 <img src="/assets/Placeholder-Img.jpg" alt="Placeholder Image"> <br>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-4 mb-3">
+                <div id ="popular" class="col-12 col-sm-6 col-lg-4 mb-3">
                     <div class="card">
                     <h3 class="card-header bg-danger">
                         Popular Comics
@@ -95,12 +95,13 @@
     </main>
        <!-- Footer Section -->
 
-     <footer class = "p-3 mb-2 bg-dark text-white ">
+     <footer id ="links" class = "p-3 mb-2 bg-dark text-white ">
         <div class = "container">
             <div class = "row">
                 <div class = "col-12 col-md-6 text-left">
                     <h1>Footer Links</h1>
-                    <h6 class="credits">Data provided by Marvel. © 2014 Marvel</h6>
+                    <a href="http://marvel.com">Data provided by Marvel. © 2014 Marvel</a>
+                    <a class="text-end" href="https://www.omdbapi.com/">Data provided by OMDb.</a>
                 </div>
             </div>
         </div>
