was able to fetch comic names

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <p class="card-text">
                             For more comics visit:
                         </p>
+                        <div id="comic-list"></div>
                     </div>
                     </div>
                 </div>
