--- a/index.html
+++ b/index.html
@@ -49,16 +49,13 @@
                     </div>
                 </div>
                 <!--User Input Section-->
-                <div> <!--enter col sizing -->
+                <div id="feedback"> <!--enter col sizing -->
                     <div class="card">
                     <h3 class="card-header bg-warning">
                         User Input:
                     </h3>
                     <div class="card-body">
                         <form id="search-form" class="form-input w-100">
-                            <input id="search-input" class="form-input w-100" type ="text" placeholder="Search">
-                            <button class="btn btn-info btn-warning">Search
-                            </button>
                         </form>            
                     </div>
                     </div>
