added randomized movie poster to movie card

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h3 class="card-header bg-danger">
                         Popular Movies
                     </h3>
-                    <div class="card-body">
+                    <div id = "movieCard" class="card-body">
                         <p class="card-text">
                             For more movies visit: 
                         </p>
