added feedback and end screen, as well as made the quiz operational

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </div>
         </div>
 
-        <section class="row my-4 border border-dark justify-content-around"> <!-- remove border -->
+        <section id ="collapse" class="row my-4 border border-dark justify-content-around"> <!-- remove border -->
             <div id ="quiz"class="col-12 col-md-9 text-center">
 
                 <!-- Placeholder img for now until I can figure out to fecth img from api -->
@@ -48,22 +48,11 @@
                     <div id="choices" class="choices"></div>
                     </div>
                 </div>
-                <!--User Input Section-->
-                <div id="feedback"> <!--enter col sizing -->
-                    <div class="card">
-                    <h3 class="card-header bg-warning">
-                        User Input:
-                    </h3>
-                    <div class="card-body">
-                        <form id="search-form" class="form-input w-100">
-                        </form>            
-                    </div>
-                    </div>
-                </div>
-                <div>
-                    
-                </div>
-
+                <!--Feedback section-->
+                <div id="feedback" class="hide">
+                    <h3 id="response"></h3>
+                    <button id="next-btn">Next</button>
+                </div>    
                 <div id ="popular" class="col-12 col-sm-6 col-lg-4 mb-3">
                     <div class="card">
                     <h3 class="card-header bg-danger">
@@ -77,9 +66,7 @@
                     </div>
                     </div>
                 </div>
-        
-
-                <div class="col-12 col-sm-6 col-lg-4 mb-3">
+                <div id ="popular" class="col-12 col-sm-6 col-lg-4 mb-3">
                     <div class="card">
                     <h3 class="card-header bg-danger">
                         Popular Movies
@@ -89,10 +76,14 @@
                             For more movies visit: 
                         </p>
                     </div>
-                    </div>
                 </div>
-                </section>
-            </div>  
+            </div>
+        </section>
+        </div> 
+        <div id="end-screen" class="hide">
+            <h4>Good Job!</h4>
+            <p id="final-score"></p>
+        </div> 
     </main>
        <!-- Footer Section -->
 
