--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
 
         <!--Nav bar-->   
         <div class = "row my-4 border border-dark"> <!-- add ID and nav fx -->
-            <div class="topnav" id = "home">
-                <a class="active" href="#home">Home</a>
-                <a href="#quiz">Quiz</a>
-                <a href="#popular">Popular</a>
-                <a href="#links">Links</a>
-              </div>
+            <ul class="nav nav-tabs justify-content-end" id = "home">
+                <li class ="nav-item">
+                <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class ="nav-item">
+                <a class="nav-link" href="#quiz">Quiz</a>
+                </li>
+                <li class ="nav-item">
+                <a class="nav-link" href="#popular">Popular</a>
+                </li>
+                <li class ="nav-item">
+                <a class="nav-link" href="#links">Links</a>
+                </li>
+            </ul>
         </div>
 
         <section class="row my-4 border border-dark justify-content-around"> <!-- remove border -->
