Fixed comic covers and reset-button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <div id="end-screen" class="hide">
             <h4>Good Job!</h4>
             <p id="final-score"></p>
+            <button id="reset">Go Back</button>
         </div> 
     </main>
        <!-- Footer Section -->
