--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>  
         <div id="end-screen" class="hide">
-            <h4>Good Job!</h4>
+            <h4>Results</h4>
             <p id="final-score"></p>
             <button id="reset">Go Back</button>
         </div> 
