--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
               <div> <!--enter col sizing -->
                 <div class="card">
                 <h3 class="card-header bg-warning">
-                    What's your Favorite Marvel Movie:
+                    What's your Favorite Marvel Character:
                 </h3>
                 <div class="card-body">
                     <form id="search-form" class="form-input w-100">
                         <input type="text" id="fname" name="fname"class="form-input w-100" placeholder="Name"> <br>
-                        <input id="search-input" class="form-input w-100" type ="text" placeholder="Your Favorite Movie">
-                        <button class="btn btn-info btn-warning">Search
+                        <input id="search-input" class="form-input w-100" type ="text" placeholder="Your Favorite Character">
+                        <button id="chtrBtn" class="btn-info btn-warning">Search
                         </button>
         
                     </form> 
-                           
+                        <div id="character-stuff"></div>   
                 </div>
                 </div>
             </div>
