--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <th scope="col">Favorite Character</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="tableBody">
                   <tr>
                     <th id = "addRow" scope="row"></th>
                     <td id = "addName"></td>
