--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <div id="choices" class="choices"></div>
                     </div>
                 </div>
-                <!--User Input Section-->
-                <div id="feedback" class="hide"></div>    
+                <!--Feedback Section-->
+                <div id="feedback" class="border-dark hide"></div>    
               <!--User Input Section-->
               <div> <!--enter col sizing -->
                 <div class="card">
