--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id ="quiz"class="col-12 col-md-9 text-center">
 
                 <!-- Placeholder img for now until I can figure out to fecth img from api -->
-                <img src="/assets/Placeholder-Img.jpg" alt="Placeholder Image"> <br>
+                <img src="/assets/images/Placeholder-Img.jpg" alt="Placeholder Image"> <br>
 
                 <button id="start">Start Quiz</button>
                 <!-- Start of card section -->
