--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
                         Popular Comics
                     </h3>
                     <div class="card-body">
-                        <p class="card-text">
-                            For more comics visit:
-                        </p>
                         <div id="comic-list"></div>
                     </div>
                     </div>
@@ -145,6 +142,6 @@
         </div>
     </footer><!--ending fotter-->
 
-<script src="/assets/script.js"></script>
+<script src="./assets/script.js"></script>
 </body>
 </html>
