--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/styles.css" />
-    <title>Sidekick Finder</title>
+    <title>The Comic-Book</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class = "container">
             <div class = "row">
                 <div class = "col-12 col-md-6 text-left">
-                    <h1>Find your Sidekick</h1>
+                    <h1>The Comic-Book</h1>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
               <div> <!--enter col sizing -->
                 <div class="card">
                 <h3 class="card-header bg-warning">
-                    What's your Favorite Marvel Character:
+                    What's your Favorite Marvel Character?:
                 </h3>
                 <div class="card-body">
                     <form id="search-form" class="form-input w-100">
